--- a/index.html
+++ b/index.html
@@ -8,22 +8,30 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     />
+    <link rel="stytesheet" href="./assets/css/style.css">
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
     <title>Alchemic Weather</title>
     </head>
 
     <body>
         <header>
-            <div>
+            <div class="container-max-width p-3 text-center text-white bg-dark ">
                 <h1>Alchemic Weather </h1>
             </div>
         </header>
-        <main>
-            <div>
+        <main class="row justify-content-center text-center ">
+            <div id="city-search" class="row p-3 col-2">
+                <h2>Seach for a City:</h2>
+                <textarea id="" class="text-area " type="Type Here" ></textarea>
+                <button id="search-button" class="button col" >Search</button>
+            </div>
+           
+            <div id="geoLocation" class="container m-3 p-3 border bg-light row col-6"></div>
 
-            </div>
-            <div>
-                
-            </div>
         </main>
     </body>
     <script link="text/script" src="./assets/js/script.js"></script>
