--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
         />
         <link rel="stytesheet" href="./assets/css/style.css">
-        <script
-        src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-        crossorigin="anonymous"
-        ></script>
         <title>Alchemic Weather</title>
     </head>
 
@@ -23,18 +18,29 @@
                 <h1>Alchemic Weather</h1>
             </div>
         </header>
-        <main class="row justify-content-center text-center ">
-            <div class="col-2">
-                <form id="city-search" class="row p-3 ">
+        <main class="container">
+            <div class="row justify-content-center text-center " >
+                <div class="col-3">
                     <h2>Seach for a City: </h2>
-                    <label for="City"></label>
-                    <input type="text" id="city" class="mb-1"></input>
-                    <button id="search-button" class="button col" >Search</button>
-                </form>
+                    <form id="city-search" class="row p-3 ">
+                        <label for="city"></label>
+                        <input name="city" id="city" type="text" autofocus="true" class="mb-1"></input>
+                        <button id="search-button" class="button col" >Search</button>
+                    </form>
+                </div>
+                <div id="geoLocation" class="col-8 m-3 p-3 border bg-light row "></div>
             </div>
-            <div id="geoLocation" class="container m-3 p-3 border bg-light row col-6"></div>
-
+            <div id="display-city" class="row justify-content-center ">
+                <div id="saved-location" class="col"></div>
+                <div id="5-day" class="row col-8">
+                    <!-- <div id="card1" class="col-1 p-5 m-3 card"></div>
+                    <div id="card2" class="col-1 p-5 m-3 card"></div>
+                    <div id="card3" class="col-1 p-5 m-3 card"></div>
+                    <div id="card4" class="col-1 p-5 m-3 card"></div>
+                    <div id="card5" class="col-1 p-5 m-3 card"></div> -->
+                </div>
+            </div>
         </main>
     </body>
-    <script link="text/script" src="./assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </html>
