--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
         rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
         />
+        <script
+        src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        crossorigin="anonymous"
+      ></script>
         <link rel="stytesheet" href="./assets/css/style.css">
         <title>Alchemic Weather</title>
     </head>
@@ -24,14 +29,14 @@
                     <h2>Seach for a City: </h2>
                     <form id="city-search" class="row p-3 ">
                         <label for="city"></label>
-                        <input name="city" id="city" type="text" autofocus="true" class="mb-1"></input>
-                        <button id="search-button" class="button col" >Search</button>
+                        <input name="city" id="city-typed" type="text" autofocus="true" class="mb-1 form-input"></input>
+                        <button type="submit" id="search-button" class="button col" >Search</button>
                     </form>
                 </div>
                 <div id="geoLocation" class="col-8 m-3 p-3 border bg-light row "></div>
             </div>
             <div id="display-city" class="row justify-content-center ">
-                <div id="saved-location" class="col"></div>
+                <div  class="col"><h1 id="saved-location"></h1></div>
                 <div id="5-day" class="row col-8">
                     <!-- <div id="card1" class="col-1 p-5 m-3 card"></div>
                     <div id="card2" class="col-1 p-5 m-3 card"></div>
